--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch]
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 40
 
     steps:
       - uses: actions/checkout@v4
@@ -15,35 +15,67 @@ jobs:
           distribution: temurin
           java-version: 17
 
-      # 解压你仓库里的 ZIP，提取两个工程
-      - name: Unzip project from repo ZIP
+      # 1) 解压 ZIP
+      - name: Unzip project ZIP
         run: |
-          mkdir -p phone-caster car-receiver
           unzip -q ScreenCastProject_fixed_final.zip -d srczip
-          PHONE_DIR=$(find srczip -type d -name "phone-caster" | head -n1 || true)
-          CAR_DIR=$(find srczip -type d -name "car-receiver" | head -n1 || true)
-          if [ -z "$PHONE_DIR" ] || [ -z "$CAR_DIR" ]; then
-            echo "❌ 没找到 phone-caster / car-receiver 目录，请确认 ZIP 内结构"; exit 1
-          fi
-          rsync -a "$PHONE_DIR"/ phone-caster/
-          rsync -a "$CAR_DIR"/ car-receiver/
-          ls -la phone-caster car-receiver
+          echo "== Unzipped to srczip =="
+          find srczip -maxdepth 3 -type d -printf "%p\n"
 
-      # 改 gradle-wrapper.properties 的分发地址为国内镜像，并赋予 gradlew 可执行权限
+      # 2) 自动识别两个 Android 工程（含 gradlew 且含 app/build.gradle）
+      - name: Detect Android projects in ZIP
+        id: detect
+        shell: bash
+        run: |
+          mapfile -t PROJ < <(find srczip -type f -name "gradlew" -printf "%h\n" \
+                            | while read d; do
+                                if [ -f "$d/app/build.gradle" ] || [ -f "$d/app/build.gradle.kts" ]; then
+                                  echo "$d"
+                                fi
+                              done | sort -u)
+          echo "Found projects:"
+          printf ' - %s\n' "${PROJ[@]}"
+
+          if [ "${#PROJ[@]}" -lt 2 ]; then
+            echo "❌ 只找到 ${#PROJ[@]} 个 Android 工程，至少需要 2 个（手机端/车机端）。"
+            exit 1
+          fi
+
+          # 取前两个作为 发送端/接收端（顺序不重要，后续你可按需要对调）
+          SENDER="${PROJ[0]}"
+          RECEIVER="${PROJ[1]}"
+
+          echo "SENDER=$SENDER"   | tee -a $GITHUB_OUTPUT
+          echo "RECEIVER=$RECEIVER" | tee -a $GITHUB_OUTPUT
+
+      # 3) 规范化到固定目录
+      - name: Normalize project folders
+        run: |
+          rm -rf phone-caster car-receiver
+          rsync -a "${{ steps.detect.outputs.SENDER }}/"   phone-caster/
+          rsync -a "${{ steps.detect.outputs.RECEIVER }}/" car-receiver/
+          echo "== phone-caster =="
+          ls -la phone-caster | head -n 50
+          echo "== car-receiver =="
+          ls -la car-receiver | head -n 50
+
+      # 4) 切换 Gradle wrapper 分发镜像，并授予 gradlew 可执行权限
       - name: Switch Gradle wrapper to CN mirror & chmod
         run: |
           for f in phone-caster/gradle/wrapper/gradle-wrapper.properties car-receiver/gradle/wrapper/gradle-wrapper.properties; do
-            cp "$f" "$f.bak" || true
-            # 镜像1：Gradle 中国镜像（默认）
-            sed -i 's#https://services.gradle.org/distributions#https://downloads.gradle-dn.com/distributions#g' "$f"
-            # 如上面不稳，可改用镜像2：腾讯云（把上一行注释，这一行去掉注释）
-            # sed -i 's#https://services.gradle.org/distributions#https://mirrors.cloud.tencent.com/gradle#g' "$f"
-            echo "---- $f ----"; cat "$f"
+            if [ -f "$f" ]; then
+              cp "$f" "$f.bak" || true
+              # 镜像1：Gradle 中国镜像
+              sed -i 's#https://services.gradle.org/distributions#https://downloads.gradle-dn.com/distributions#g' "$f"
+              # 如果上面不稳定，可改用腾讯云镜像（把上一行注释，放开下一行）
+              # sed -i 's#https://services.gradle.org/distributions#https://mirrors.cloud.tencent.com/gradle#g' "$f"
+              echo "---- $f ----"; cat "$f"
+            fi
           done
           chmod +x phone-caster/gradlew || true
           chmod +x car-receiver/gradlew || true
 
-      # 直接用各自项目的 gradle wrapper 编译（不再使用 setup-gradle，避免下载分发失败）
+      # 5) 编译两个工程（使用各自 wrapper，避免 setup-gradle 的分发下载问题）
       - name: Build phone-caster (debug)
         working-directory: phone-caster
         env:
@@ -56,7 +88,7 @@ jobs:
           GRADLE_USER_HOME: ${{ github.workspace }}/.gradle-home
         run: ./gradlew --no-daemon --stacktrace assembleDebug
 
-      # 收集两个 APK 打成一个压缩包
+      # 6) 收集 APK 并打包
       - name: Collect APKs into a single ZIP
         run: |
           mkdir -p out
